tests/ui/const-generics/issues/issue-79674.stderr
error[E0308]: mismatched types
  --> $DIR/issue-79674.rs:26:5
   |
LL |     requires_distinct("str", 12);
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `true`, found `false`
   |
   = note: expected constant `true`
              found constant `false`
note: required by a bound in `requires_distinct`
  --> $DIR/issue-79674.rs:23:37
   |
LL | fn requires_distinct<A, B>(_a: A, _b: B) where
   |    ----------------- required by a bound in this function
LL |     A: MiniTypeId, B: MiniTypeId,
LL |     Lift<{is_same_type::<A, B>()}>: IsFalse {}
   |                                     ^^^^^^^ required by this bound in `requires_distinct`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
